Gnomenbehausung: mark bookcase static

--- a/mod/area/gnomenbehausung_.git.yml
+++ b/mod/area/gnomenbehausung_.git.yml
@@ -312,14 +312,14 @@ Creature List:
     Str: {type: :byte, value: 10}
     Subrace: {type: :cexostr, value: ""}
     Tag: {type: :cexostr, value: NW_MEPSTEAM}
-    Tail: {type: :byte, value: 0}
+    Tail_New: {type: :dword, value: 0}
     TemplateList: 
       type: :list
       value: []
 
     TemplateResRef: {type: :resref, value: nw_mepsteam}
     WalkRate: {type: :int, value: 7}
-    Wings: {type: :byte, value: 0}
+    Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 11}
     XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 28.425}
@@ -493,14 +493,14 @@ Creature List:
     Str: {type: :byte, value: 8}
     Subrace: {type: :cexostr, value: ""}
     Tag: {type: :cexostr, value: GrauerErdmolch}
-    Tail: {type: :byte, value: 0}
+    Tail_New: {type: :dword, value: 0}
     TemplateList: 
       type: :list
       value: []
 
     TemplateResRef: {type: :resref, value: grauerblutmol001}
     WalkRate: {type: :int, value: 4}
-    Wings: {type: :byte, value: 0}
+    Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 10}
     XOrientation: {type: :float, value: 0.0}
     XPosition: {type: :float, value: 56.4546}
@@ -518,7 +518,7 @@ Door List:
     AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 59}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 80}
@@ -529,7 +529,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -6140,7 +6140,7 @@ Placeable List:
     Fort: {type: :byte, value: 16}
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 1}
+    HasInventory: {type: :byte, value: 0}
     Interruptable: {type: :byte, value: 1}
     ItemList: 
       type: :list
@@ -7108,10 +7108,10 @@ Placeable List:
     OnUsed: {type: :resref, value: ""}
     OnUserDefined: {type: :resref, value: ""}
     OpenLockDC: {type: :byte, value: 18}
-    Plot: {type: :byte, value: 1}
+    Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 662}
     Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
+    Static: {type: :byte, value: 1}
     Tag: {type: :cexostr, value: Bookcase3}
     TemplateResRef: {type: :resref, value: x0_bookcase03}
     TrapDetectDC: {type: :byte, value: 0}
@@ -7121,7 +7121,7 @@ Placeable List:
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
     Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
+    Useable: {type: :byte, value: 0}
     Will: {type: :byte, value: 0}
     X: {type: :float, value: 31.8545}
     Y: {type: :float, value: 26.3177}
