--- a/mod/utc/ad_pillar.utc.yml
+++ b/mod/utc/ad_pillar.utc.yml
@@ -15,7 +15,7 @@ ClassList:
     ClassLevel: {type: :short, value: 10}
 Comment: {type: :cexostr, value: ""}
 Con: {type: :byte, value: 10}
-Conversation: {type: :resref, value: ad_pillar_dlg}
+Conversation: {type: :resref, value: ""}
 CurrentHitPoints: {type: :short, value: 64}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
@@ -63,7 +63,7 @@ Race: {type: :byte, value: 24}
 ScriptAttacked: {type: :resref, value: nw_c2_default5}
 ScriptDamaged: {type: :resref, value: nw_c2_default6}
 ScriptDeath: {type: :resref, value: nw_c2_default7}
-ScriptDialogue: {type: :resref, value: nw_c2_default4}
+ScriptDialogue: {type: :resref, value: bb_convc}
 ScriptDisturbed: {type: :resref, value: nw_c2_default8}
 ScriptEndRound: {type: :resref, value: nw_c2_default3}
 ScriptHeartbeat: {type: :resref, value: nw_c2_default1}
